[gd_scene load_steps=21 format=3 uid="uid://c8ti7ovxqvpgh"]

[ext_resource type="PackedScene" uid="uid://daouxihd2xppr" path="res://Assets/AutomatApplied.glb" id="1_crbfg"]
[ext_resource type="Script" path="res://Scripts/automat.gd" id="2_87r2q"]
[ext_resource type="Material" uid="uid://bj118p6up2n7j" path="res://Assets/Materials/Metall_Glatt.tres" id="2_k3y3r"]
[ext_resource type="Material" uid="uid://bd7gy6guff6jw" path="res://Assets/Materials/Glas.tres" id="3_lor8m"]
[ext_resource type="PackedScene" uid="uid://b78p4v3k6a2ov" path="res://Szenen/Interactive Component.tscn" id="4_1wla6"]
[ext_resource type="PackedScene" uid="uid://burmik51o82fn" path="res://Szenen/ActivationModule.tscn" id="4_15gl3"]
[ext_resource type="Script" path="res://Scripts/flicker.gd" id="7_45hna"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b6q0h"]
albedo_color = Color(0.320668, 0.320668, 0.320668, 1)
metallic = 0.22
roughness = 0.58

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qcdug"]
albedo_color = Color(0.551754, 0.599677, 0.581404, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjhh8"]
albedo_color = Color(0.699957, 0.741107, 0.725272, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o0kjs"]
albedo_color = Color(0.261892, 0.261892, 0.261892, 1)
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcps4"]
albedo_color = Color(0, 0, 0, 1)
roughness = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_0fyym"]
size = Vector3(1.29681, 1.41611, 0.695953)

[sub_resource type="BoxShape3D" id="BoxShape3D_mmm8x"]
size = Vector3(0.686523, 0.457031, 0.164917)

[sub_resource type="BoxShape3D" id="BoxShape3D_sg2hw"]
size = Vector3(1.29794, 0.156418, 0.0109329)

[sub_resource type="BoxShape3D" id="BoxShape3D_3l72j"]
size = Vector3(0.402023, 0.671896, 0.698168)

[sub_resource type="BoxShape3D" id="BoxShape3D_ji117"]
size = Vector3(0.23336, 0.672384, 0.698168)

[sub_resource type="BoxShape3D" id="BoxShape3D_r3dlr"]
size = Vector3(1.2083, 0.300303, 0.698168)

[sub_resource type="BoxShape3D" id="BoxShape3D_8qs3h"]
size = Vector3(0.111364, 0.12469, 0.132491)

[sub_resource type="BoxShape3D" id="BoxShape3D_ujmya"]
size = Vector3(0.0914688, 0.16066, 0.135147)

[node name="AutomatApplied" instance=ExtResource("1_crbfg")]
process_mode = 3
transform = Transform3D(0.814987, 0, 0, 0, 0.814987, 0, 0, 0, 0.814987, 0, 0, 0.100949)
script = ExtResource("2_87r2q")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.464832, 1.84631, 0.451971)

[node name="Circle" parent="." index="1"]
surface_material_override/0 = ExtResource("2_k3y3r")

[node name="Plane" parent="." index="2"]
surface_material_override/0 = ExtResource("3_lor8m")
surface_material_override/1 = SubResource("StandardMaterial3D_b6q0h")
surface_material_override/2 = SubResource("StandardMaterial3D_qcdug")
surface_material_override/3 = SubResource("StandardMaterial3D_xjhh8")
surface_material_override/4 = SubResource("StandardMaterial3D_o0kjs")
surface_material_override/5 = SubResource("StandardMaterial3D_pcps4")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000452042, 1.37651, 0.219711)
shape = SubResource("BoxShape3D_0fyym")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.80662, 0.59107, 0, -0.59107, 0.80662, -0.0829715, 0.426912, 0.36339)
shape = SubResource("BoxShape3D_mmm8x")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000112534, 0.590468, 0.56031)
shape = SubResource("BoxShape3D_sg2hw")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.448072, 0.332068, 0.216693)
shape = SubResource("BoxShape3D_3l72j")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.534501, 0.332312, 0.216693)
shape = SubResource("BoxShape3D_ji117")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="StaticBody3D" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0362745, 0.146272, 0.216693)
shape = SubResource("BoxShape3D_r3dlr")

[node name="Marker3D" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0942836, 0.518186, 0.487195)

[node name="Activation Module" parent="." index="5" instance=ExtResource("4_15gl3")]
transform = Transform3D(-7.55604e-08, 2.96435e-08, -1, 0.00210181, -0.999998, -2.98023e-08, -0.999998, -0.00210181, 7.54979e-08, 0.504958, 1.17018, 0.550386)
activators = Array[String](["coin"])

[node name="CollisionShape3D" parent="Activation Module" index="0"]
transform = Transform3D(1, -2.53785e-07, -6.94911e-12, 2.53785e-07, 1, -5.49005e-13, 6.79989e-12, 3.52829e-13, 0.999985, -0.0294475, -0.0296267, 0.00860223)
shape = SubResource("BoxShape3D_8qs3h")

[node name="Interactive Component" parent="." index="6" instance=ExtResource("4_1wla6")]

[node name="CollisionShape3D" parent="Interactive Component" index="0"]
transform = Transform3D(1, -4.23752e-08, -1.29319e-12, 4.23752e-08, 1, -2.92821e-15, 1.80478e-12, -6.10623e-14, 1, -0.33849, -1.15946, -0.49235)
shape = SubResource("BoxShape3D_ujmya")

[node name="Control" type="CanvasLayer" parent="." index="7"]
process_mode = 3
layer = 4

[node name="Control" type="Control" parent="Control" index="0"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Control/Control" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="Control/Control/CenterContainer" index="0"]
process_mode = 3
clip_contents = false
custom_minimum_size = Vector2(292, 0)
layout_mode = 2
theme_override_colors/guide_color = Color(0.88, 0.88, 0.88, 1)
theme_override_font_sizes/font_size = 84
auto_height = true
item_count = 12
max_columns = 3
same_column_width = true
fixed_column_width = 88
icon_mode = 0
item_0/text = "1"
item_1/text = "2"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "6"
item_6/text = "7"
item_7/text = "8"
item_8/text = "9"
item_9/text = "#"
item_10/text = "0"
item_11/text = "*"

[node name="SpotLight3D" type="SpotLight3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, -0.216815, 0.976213, 0, -0.976213, -0.216815, -0.108578, 1.99842, 0.44488)
light_energy = 0.5
light_volumetric_fog_energy = 0.0
light_bake_mode = 1
distance_fade_enabled = true
distance_fade_begin = 25.0
distance_fade_shadow = 5.0
distance_fade_length = 3.0
spot_range = 3.0
spot_attenuation = 2.0
spot_angle = 28.3702
script = ExtResource("7_45hna")
baseTime = 5
randomTime = 4
lowerFlicks = 1
upperFlicks = 2
outTime = 0.1
onTime = 0.1

[connection signal="activated" from="Activation Module" to="." method="_on_activation_module_activated"]
[connection signal="pressed" from="Interactive Component" to="." method="_on_interactive_component_pressed"]
[connection signal="item_clicked" from="Control/Control/CenterContainer/ItemList" to="." method="_on_item_list_item_clicked"]

[editable path="Activation Module"]
[editable path="Interactive Component"]
